Mon Dec 24 12:35:03 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win{32,ce}/Makefile.sub (MFLAGS): defaulted to -l.

Mon Dec 24 11:56:31 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* {bcc32,win{32,ce}}/Makefile.sub (SET_MAKE): set MFLAGS which is not
	  set by default, to get rid of chaotic situation of MFLAGS/MAKEFLAGS.

Sat Dec 22 14:49:46 2007  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date.rb: don't freeze nil even if 1.8 will not be aware of
	  the issue. [ruby-dev:32677]

Wed Dec 19 13:57:43 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (TIMEZONE_VOID): check whether timezone requires zero
	  arguments.  [ruby-dev:32631]

Wed Dec 19 12:01:42 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (f_rest_arg): check if duplicated.  [ruby-core:14140]

Wed Dec 19 10:52:29 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (rb_cstr_to_inum): an underscore succeeding after octal
	  prefix is allowed.  [ruby-core:14139]

Mon Dec 17 13:43:15 2007  Tanaka Akira  <akr@fsij.org>

	* gc.c (stack_end_address): use local variable address instead of
	  __builtin_frame_address(0) to avoid SEGV on SunOS 5.11 on x86 with 
	  gcc (GCC) 3.4.3 (csl-sol210-3_4-20050802).
	  stack_end_address returned a frame address of garbage_collect
	  since stack_end_address doesn't create its own frame.
	  So a VALUE stored in a callee saved register, %edi, pushed into
	  the stack at the beginning of garbage_collect was not marked.

Mon Dec 17 12:21:25 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in (RUNRUBY): added RUNRUBYOPT.

Fri Dec 14 12:36:35 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_CHECK_VARTYPE): check if a variable is defined
	  and its type.

	* configure.in (timezone, altzone): check for recent cygwin.

	* missing/strftime.c (strftime): fix for timezone.  [ruby-dev:32536]

	* lib/mkmf.rb (try_var): should fail for functions.

	* ext/readline/extconf.rb: should use have_func for functions instead